--- a/roadnote46/src/pages/fines-and-penalties/fines-and-penalties.html
+++ b/roadnote46/src/pages/fines-and-penalties/fines-and-penalties.html
@@ -17,6 +17,7 @@
 
 
 <ion-content padding>	
+  <ion-searchbar></searchbar>
 	<ion-list>
 	  <button ion-item text-wrap *ngFor="let finePenalties of finesPenalties$ | async">
       {{finePenalties.vf_name}}
