--- a/roadnote46/src/pages/login/login.html
+++ b/roadnote46/src/pages/login/login.html
@@ -14,7 +14,7 @@
   </ion-row>
   <h1 >WELCOME!</h1>
   <ion-row justify-content-center align-items-center style="height: 30%">
-      <button ion-button color="googleplus" block margin-top (click)="login()"> 
+      <button ion-button color="googleplus" block margin-top (click)="navigateToHome()"> 
           <ion-icon name="logo-googleplus" icon-start margin-right></ion-icon>
            Log in with Google 
       </button>
